@@ -36,6 +36,7 @@ Driver=curses
 #Driver=CFontz633
 #Driver=CFontzPacket
 #Driver=CwLnx
+#Driver=g15
 #Driver=glcdlib
 #Driver=IOWarrior
 #Driver=imon
@@ -277,7 +278,11 @@ Keypad=yes
 # Default value is no
 #keypad_test_mode=yes
 
+## g15 driver for Logitech G15 Keyboard LCDs ##
+[g15]
 
+# Display size (currently unused)
+size=20x5
 
 ## glcdlib meta driver for graphical LCDs ##
 [glcdlib]
