@@ -81,6 +81,9 @@ Standard video display using the (n)curses library
 .B CwLnx
 serial/USB displays by Cwlinux (http://www.cwlinux.com)
 .TP
+.B g15
+LCD display on the Logitech G15 keyboard
+.TP
 .B glcdlib
 graphical LCDs supported by graphlcd-base
 .TP
