@@ -13,6 +13,7 @@ well as the configuration of LCDd.
 &CFontzPacket;
 &curses;
 &CwLnx;
+&g15;
 &glcdlib;
 &glk;
 &hd44780;
