@@ -30,6 +30,7 @@ v.0.5dev (ongoing development)
  + new unified serial sub-driver for hd44780 (Matteo Pillon)
  - obsolete hd44780 subdrivers-removed: lcdserializer, picanlcd
  * character mapping for special HD44780 modules (Matteo Pillon)
+ + g15 - driver for LCD in Logitech G15 gaming keyboards (Anthony J. Mirabella)
 
 v0.5.0
 This version has split off from unstable-0.4.3. Includes major changes.
